--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Productos - BIO MOUNTAIN</title>
+    <title>Carrito - BIO MOUNTAIN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
@@ -22,7 +22,7 @@
                 <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
-                    <li class="active">
+                    <li class="">
                         <a class="a_menu" href="productos.html">Productos</a>
                     </li>
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
@@ -157,8 +157,9 @@
                         <div class="col s6">
                         </div>
                         <div class="col s6">
-                            <a class="waves-effect waves-green lighten-1 btn green"><i class="material-icons right">shopping_cart
-                            </i>Realizar Compra</a>
+                            <a class="waves-effect waves-green lighten-1 btn green"><i
+                                    class="material-icons right">shopping_cart
+                                </i>Realizar Compra</a>
 
                         </div>
                     </div>
