--- a/detalle.html
+++ b/detalle.html
@@ -1,105 +1,58 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Productos - BIO MOUNTAIN</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
-      crossorigin="anonymous"
-    />
-    <link
-      href="css/materialize.min.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/estilos.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      href="css/materialize.css"
-      type="text/css"
-      rel="stylesheet"
-      media="screen,projection"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="img/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="favicon-32x32"
-      sizes="32x32"
-      href="img/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="favicon-16x16"
-      sizes="16x16"
-      href="img/favicon-16x16.png"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
+    <link rel="icon" type="favicon-32x32" sizes="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" type="favicon-16x16" sizes="16x16" href="img/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="nav">
-      <nav class="white" role="navigation">
-        <div class="nav-wrapper container">
-          <a class="black-text" href="index.html" class=""
-            ><img class="logo_Nav" src="img/logoGrande.jpg"
-          /></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a class="a_menu" href="index.html">Inicio</a></li>
-            <li class="active">
-              <a class="a_menu" href="productos.html">Productos</a>
-            </li>
-            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-            <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
-          </ul>
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
+                    <li class="active">
+                        <a class="a_menu" href="productos.html">Productos</a>
+                    </li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
+                </ul>
 
-          <ul id="nav-mobile" class="sidenav">
-            <li><a class="a_menu" href="index.html">Inicio</a></li>
-            <li><a class="a_menu" href="productos.html">Productos</a></li>
-            <li><a class="a_menu" href="contacto.html">Contacto</a></li>
-            <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-            ><i class="black-text material-icons">menu</i></a
-          >
-        </div>
-      </nav>
+                <ul id="nav-mobile" class="sidenav">
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
+                </ul>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+            </div>
+        </nav>
     </header>
 
     <main class="mainProductos">
-      <nav class="no-shadows" role="navigation">
-        <div class="nav-wrapper no-shadows" id="barraCategorias">
-          <ul class="right hide-on-med-and-down barraCategorias">
-            <li>
-              <a href="#"
-                ><i
-                  class="material-icons black-text text-darken-2 objetoCategorias"
-                  >shopping_cart</i
-                ></a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><a
-                  id="miCuenta"
-                  class="waves-effect waves-light btn objetoCategorias"
-                  >Mi cuenta</a
-                ></a
-              >
-            </li>
-          </ul>
-          <!-- <ul class="left hide-on-med-and-down barraCategorias">
+        <nav class="no-shadows" role="navigation">
+            <div class="nav-wrapper no-shadows" id="barraCategorias">
+                <ul class="right hide-on-med-and-down barraCategorias">
+                    <li>
+                        <a href="carritoCompras.html"><i
+                class="material-icons black-text text-darken-2 objetoCategorias">shopping_cart</i></a>
+                    </li>
+                    <li>
+                        <a href="#"><a id="miCuenta" class="waves-effect waves-light btn objetoCategorias">Mi cuenta</a></a>
+                    </li>
+                </ul>
+                <!-- <ul class="left hide-on-med-and-down barraCategorias">
             <li>
               <a class="text-darken-2 black-text objetoCategorias" href="#"
                 >Bolsas</a
@@ -122,106 +75,109 @@
             </li>
           </ul> -->
 
-          <ul id="nav-mobile2" class="sidenav">
-            <li><a class="a_menu" href="#">Bolsas</a></li>
-            <li><a class="a_menu" href="#">Botellas</a></li>
-            <li><a class="a_menu" href="#">Cacatubos</a></li>
-            <li><a class="a_menu" href="#">Guardados</a></li>
-            <li><a class="a_menu" href="#">Carrito</a></li>
-            <li><a class="a_menu" href="#">Mi cuenta</a></li>
-          </ul>
+                <ul id="nav-mobile2" class="sidenav">
+                    <li><a class="a_menu" href="#">Bolsas</a></li>
+                    <li><a class="a_menu" href="#">Botellas</a></li>
+                    <li><a class="a_menu" href="#">Cacatubos</a></li>
+                    <li><a class="a_menu" href="#">Guardados</a></li>
+                    <li><a class="a_menu" href="#">Carrito</a></li>
+                    <li><a class="a_menu" href="#">Mi cuenta</a></li>
+                </ul>
 
-          <a href="#" data-target="nav-mobile2" class="right sidenav-trigger"
-            ><i class="black-text material-icons green-text">settings</i></a
-          >
-        </div>
-      </nav>
-<br><br><br><br>
-      <section id="objetoDetalle">
-        <div class="row">
-          <div class="col m3">
-          </div>
-          <div class="col s6 m4">
-              <img src="img/vasotermico.jpg">
-          </div>
-          <div class="col s6 m2">
-              <h4 class="center-align">Vaso termico</h4>
-              <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas.</p>
-              <br>
-              <br>
-              <div class="row">
-                  <div col s12 m6>
-              <span id="precioDetalle" class="green-text left">$360</span>
+                <a href="#" data-target="nav-mobile2" class="right sidenav-trigger"><i
+            class="black-text material-icons green-text">settings</i></a>
             </div>
-                <div col s12 m6>
-                    <span id="envioDetalle" class="green-text right">Envio gratis <i id="envioIcono" class="material-icons">motorcycle</i></span>
+        </nav>
+        <br><br><br><br>
+        <section id="objetoDetalle">
+            <div class="row">
+                <div class="col m3">
+                </div>
+                <div class="col s6 m4">
+                    <img src="img/vasotermico.jpg">
+                </div>
+                <div class="col s6 m2">
+                    <h4 class="center-align">Vaso termico</h4>
+                    <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas.</p>
+                    <br>
+                    <br>
+                    <div class="row">
+                        <div col s12 m6>
+                            <span id="precioDetalle" class="green-text left">$360</span>
+                        </div>
+                        <div col s12 m6>
+                            <span id="envioDetalle" class="green-text right">Envio gratis <i id="envioIcono"
+                  class="material-icons">motorcycle</i></span>
+                        </div>
+                    </div>
+
+                    <br>
+                    <div class="row">
+                        <div class="col s3 m3 center">
+                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">remove</i></a>
+                        </div>
+                        <div class="col s6 m6 center">
+                            <input id="inputCantidad" class="black-text" placeholder="Cantidad" type="number" />
+                        </div>
+                        <div class="col s3 m3 center">
+                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m12 center">
+                            <a class="waves-effect waves-light btn-large green" href="carritoCompras.html"><i
+                  class="material-icons right">add_shopping_cart</i>Agregar al carrito</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col m3">
+                </div>
             </div>
-            </div>
-            
-              <br>
-              <div class="row">
-                  <div class="col s3 m3 center">
-                    <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">remove</i></a>
-                  </div>
-                  <div class="col s6 m6 center">
-                    <input id="inputCantidad" class="black-text" placeholder="Cantidad" type="number"/>
-                  </div>
-                  <div class="col s3 m3 center">
-                    <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col s12 m12 center">
-                    <a class="waves-effect waves-light btn-large green"><i class="material-icons right">add_shopping_cart</i>Agregar al carrito</a>
-                  </div>
-              </div>
-              
-        </div>
-        <div class="col m3">
-        </div>
-        </div>
-      </section>
-<br>
+        </section>
+        <br>
 
     </main>
     <footer class="page-footer green center">
         <div class="container">
-          <div class="row">
-            <div class="col l2 s12">
-              <div class="imgFooter">
-                <img src="img/logoBlanco.png" class="logo_footer" />
-              </div>
+            <div class="row">
+                <div class="col l2 s12">
+                    <div class="imgFooter">
+                        <img src="img/logoBlanco.png" class="logo_footer" />
+                    </div>
+                </div>
+
+                <div class="col l7 s12">
+                    <h5 class="white-text">Menú</h5>
+                    <ul>
+                        <li><a class="a_menu" href="index.html">Inicio</a></li>
+                        <li><a class="a_menu" href="productos.html">Productos</a></li>
+                        <li class="active">
+                            <a class="a_menu" href="contacto.html">Contacto</a>
+                        </li>
+                        <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
+                    </ul>
+                </div>
+
+                <div class="col l3 s12 right redes-footer">
+                    <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+                    <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
+                    <a href="https://www.twitter.com/" class="fab fa-twitter"></a>
+                    <a href="https://www.pinterest.com/" class="fab fa-pinterest-p"></a>
+                </div>
             </div>
-  
-            <div class="col l7 s12">
-              <h5 class="white-text">Menú</h5>
-              <ul>
-                <li><a class="a_menu" href="index.html">Inicio</a></li>
-                <li><a class="a_menu" href="productos.html">Productos</a></li>
-                <li class="active">
-                  <a class="a_menu" href="contacto.html">Contacto</a>
-                </li>
-                <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
-              </ul>
-            </div>
-  
-            <div class="col l3 s12 right redes-footer">
-              <a href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
-              <a href="https://www.instagram.com/" class="fab fa-instagram"></a>
-              <a href="https://www.twitter.com/" class="fab fa-twitter"></a>
-              <a href="https://www.pinterest.com/" class="fab fa-pinterest-p"></a>
-            </div>
-          </div>
         </div>
         <div class="footer-copyright">
-          <p>© Bio Mountain</p>
+            <p>© Bio Mountain</p>
         </div>
-      </footer>
-  
-      <!--  Scripts-->
-      <script src="js/materialize.min.js"></script>
-      <script src="js/materialize.js"></script>
-    </body>
-  </html>
-  </body>
+    </footer>
+
+    <!--  Scripts-->
+    <script src="js/materialize.min.js"></script>
+    <script src="js/materialize.js"></script>
+</body>
+
+</html>
+</body>
+
 </html>
