--- a/sucursales.html
+++ b/sucursales.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>BIO MOUNTAIN - Home</title>
+    <title>Sucursales - BIO MOUNTAIN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/estilos.css" type="text/css" rel="stylesheet" media="screen,projection" />
@@ -17,13 +17,11 @@
             <div class="nav-wrapper container">
                 <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
                 <ul class="right hide-on-med-and-down">
-
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="productos.html">Productos</a></li>
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li class="active"><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
-
                 <ul id="nav-mobile" class="sidenav">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="productos.html">Productos</a></li>
@@ -37,31 +35,20 @@
     </header>
 
     <main class="main_Home">
-
         <div class="container section">
             <div class="row">
                 <div class="col s12">
-
                     <div class="carousel carousel-slider">
-
                         <a class="carousel-item">
                             <img src="img/slider1.jpg" alt="">
-
                         </a>
-
                         <a class="carousel-item">
                             <img src="img/slider2.jpg" alt="">
-
                         </a>
-
                         <a class="carousel-item">
                             <img src="img/slider3.jpg" alt="">
-
                         </a>
-
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -72,24 +59,16 @@
                     <h2 class="green-text">¿Dónde estamos?</h2>
                     <div class="row">
                         <div class="col s4 m10">
-
                             <div class="card">
                                 <div class="card-image">
                                     <img src="img/rutas-senderismo-grazalema.jpg" alt="">
-
                                 </div>
                                 <div class="card-content">
-
                                     <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
                                         Neuquen, Salta.
                                     </p>
-
                                 </div>
-
-
                             </div>
-
-
                         </div>
                     </div>
                 </div>
@@ -111,18 +90,10 @@
                 <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquen</a>
                 <a id="salta" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaSalta()">Salta</a>
 
-
                 <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31246.984632601936!2d-58.45746332248552!3d-34.593168524128124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f680cb2679%3A0x8b0a61b3eb088c0!2sHumboldt%20590%2C%20C1414%20CSL%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1607307750096!5m2!1ses-419!2sar"
                     width="630" height="665" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
             </div>
-
-
         </div>
-
-
-
-
         </select>
 
     </main>
