--- a/sucursales.html
+++ b/sucursales.html
@@ -52,49 +52,51 @@
                 </div>
             </div>
         </div>
+        <section class="container row">
+            <div class="contenedorAbajo col s12 m4">
+                <div class="contenedor-izquierda col s12">
+                    <div class="container section">
+                        <h2 class="green-text">¿Dónde estamos?</h2>
 
-        <div class="contenedorAbajo">
-            <div class="contenedor-izquierda">
-                <div class="container section">
-                    <h2 class="green-text">¿Dónde estamos?</h2>
-                    <div class="row">
-                        <div class="col s4 m10">
-                            <div class="card">
-                                <div class="card-image">
-                                    <img src="img/rutas-senderismo-grazalema.jpg" alt="">
-                                </div>
-                                <div class="card-content">
-                                    <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
-                                        Neuquen, Salta.
-                                    </p>
-                                </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/rutas-senderismo-grazalema.jpg" alt="">
+                            </div>
+                            <div class="card-content">
+                                <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
+                                    Neuquen, Salta.
+                                </p>
                             </div>
                         </div>
+
+
+                    </div>
+                    <div class="parteAbajoDerecha col s12">
+
+                        <p><i class="tiny material-icons green-text">location_on</i> ¿No encontrás tu provincia?
+                            <br> Podés pedirnos una sucursal mediante <a class="green-text" href="contacto.html">contacto</a>.</p>
+
+
+                        <p><i class="tiny material-icons green-text">email</i> Si necesitás más packagings podés pedirla vía <a class="green-text" href="contacto.html">email</a>.</p>
                     </div>
                 </div>
-                <div class="parteAbajoDerecha">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <p>¿No encontrás tu provincia?
-                        <br> Podés pedirnos una sucursal mediante <a class="green-text" href="contacto.html">contacto</a>.</p>
-                    <i class="fas fa-envelope"></i>
-                    <p>Si necesitás más packagings podés pedirla vía <a class="green-text" href="contacto.html">email</a>.</p>
-                </div>
             </div>
-
-            <div class="divMapa">
-
-                <a id="bsas" class="waves-effect waves-light btn green" onclick="mostrarMapaBuenosAires()">CABA</a>
-                <a id="jujuy" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaJujuy()">Jujuy</a>
-                <a id="chubut" class=" waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaChubut()">Chubut</a>
-                <a id="mendoza" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaMendoza()">Mendoza</a>
-                <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquen</a>
-                <a id="salta" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaSalta()">Salta</a>
+            <div class="divMapa col s12 m8">
+                <div class="row">
+                    <a id="bsas" class="waves-effect waves-light btn green" onclick="mostrarMapaBuenosAires()">CABA</a>
+                    <a id="jujuy" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaJujuy()">Jujuy</a>
+                    <a id="chubut" class=" waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaChubut()">Chubut</a>
+                    <a id="mendoza" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaMendoza()">Mendoza</a>
+                    <a id="neuquen" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaNeuquen()">Neuquen</a>
+                    <a id="salta" class="waves-effect waves-light btn #a5d6a7 green lighten-3" onclick="mostrarMapaSalta()">Salta</a>
+                </div>
 
                 <iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31246.984632601936!2d-58.45746332248552!3d-34.593168524128124!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5f680cb2679%3A0x8b0a61b3eb088c0!2sHumboldt%20590%2C%20C1414%20CSL%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1607307750096!5m2!1ses-419!2sar"
-                    width="630" height="665" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    width="100%" height="665" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
-        </div>
-        </select>
+
+        </section>
 
     </main>
 
