arreglamos responsive de detalle y agregamos alt en todas las imagenes

--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -19,7 +19,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li class="">
@@ -51,7 +51,7 @@
             <article>
                 <div class="row">
                     <div class="col s3 m2">
-                        <img src="img/ovalbowl.jpg" alt="" class="circle responsive-img">
+                        <img src="img/bowlsimple.jpg" alt="Bowl - Simple - BioMountain" class="circle responsive-img">
                     </div>
                     <div class="col s9 m10">
                         <div class="col s12 m6">
@@ -80,7 +80,7 @@
 
                 <div class="row">
                     <div class="col s3 m2">
-                        <img src="img/bandejadoble.jpg" alt="" class="circle responsive-img">
+                        <img src="img/bandejadoble.jpg" alt="Bandeja - Doble - BioMountain " class="circle responsive-img">
                     </div>
                     <div class="col s9 m10">
                         <div class="col s12 m6">
@@ -107,7 +107,7 @@
                 <hr>
                 <div class="row">
                     <div class="col s3 m2">
-                        <img src="img/botella.jpg" alt="" class="circle responsive-img">
+                        <img src="img/botella.jpg" alt="Botella - BioMountain" class="circle responsive-img">
                     </div>
                     <div class="col s9 m10">
                         <div class="col s12 m6">
@@ -174,16 +174,18 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
-                <div class="col l7 s12 ">
+                <div class="col l7 s12">
                     <h5 class="white-text">Menú</h5>
                     <ul>
                         <li><a class="a_menu" href="index.html">Inicio</a></li>
                         <li><a class="a_menu" href="productos.html">Productos</a></li>
-                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li class="active">
+                            <a class="a_menu" href="contacto.html">Contacto</a>
+                        </li>
                         <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
                 </div>
@@ -197,9 +199,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>
-                © Bio Mountain
-            </p>
+            <p>© Bio Mountain</p>
         </div>
     </footer>
 
