--- a/detalle.html
+++ b/detalle.html
@@ -19,7 +19,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li class="active">
@@ -35,7 +35,8 @@
                     <li><a class="a_menu" href="contacto.html">Contacto</a></li>
                     <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+                        class="black-text material-icons">menu</i></a>
             </div>
         </nav>
     </header>
@@ -46,34 +47,14 @@
                 <ul class="right hide-on-med-and-down barraCategorias">
                     <li>
                         <a href="carritoCompras.html"><i
-                class="material-icons black-text text-darken-2 objetoCategorias">shopping_cart</i></a>
+                                class="material-icons black-text text-darken-2 objetoCategorias">shopping_cart</i></a>
                     </li>
                     <li>
-                        <a href="#"><a id="miCuenta" class="waves-effect waves-light btn objetoCategorias">Mi cuenta</a></a>
+                        <a href="#"><a id="miCuenta" class="waves-effect waves-light btn objetoCategorias">Mi
+                                cuenta</a></a>
                     </li>
                 </ul>
-                <!-- <ul class="left hide-on-med-and-down barraCategorias">
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Bolsas</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Botellas</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Cacatubos</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Guardados</a
-              >
-            </li>
-          </ul> -->
+
 
                 <ul id="nav-mobile2" class="sidenav">
                     <li><a class="a_menu" href="#">Bolsas</a></li>
@@ -85,54 +66,54 @@
                 </ul>
 
                 <a href="#" data-target="nav-mobile2" class="right sidenav-trigger"><i
-            class="black-text material-icons green-text">settings</i></a>
+                        class="black-text material-icons green-text">settings</i></a>
             </div>
         </nav>
         <br><br><br><br>
         <section id="objetoDetalle">
-            <div class="row">
-                <div class="col m3">
+            <div class="row container ">
+
+                <div class="col s12 m8 center">
+                    <img class="responsive-img" src="img/vasotermico.jpg" alt="Vaso - Termico - Bambú">
                 </div>
-                <div class="col s6 m4">
-                    <img src="img/vasotermico.jpg">
-                </div>
-                <div class="col s6 m2">
-                    <h4 class="center-align">Vaso termico</h4>
-                    <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas.</p>
-                    <br>
-                    <br>
+                <div class="col s12 m4">
                     <div class="row">
-                        <div col s12 m6>
+                        <h4 class="center-align">Vaso termico</h4>
+                        <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6">
                             <span id="precioDetalle" class="green-text left">$360</span>
                         </div>
-                        <div col s12 m6>
+                        <div class="col s12 m6">
                             <span id="envioDetalle" class="green-text right">Envio gratis <i id="envioIcono"
-                  class="material-icons">motorcycle</i></span>
+                                    class="material-icons">motorcycle</i></span>
                         </div>
                     </div>
 
                     <br>
                     <div class="row">
                         <div class="col s3 m3 center">
-                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">remove</i></a>
+                            <a class="btn-floating btn waves-effect waves-light green"><i
+                                    class="material-icons">remove</i></a>
                         </div>
                         <div class="col s6 m6 center">
                             <input id="inputCantidad" class="black-text" placeholder="Cantidad" type="number" />
                         </div>
                         <div class="col s3 m3 center">
-                            <a class="btn-floating btn waves-effect waves-light green"><i class="material-icons">add</i></a>
+                            <a class="btn-floating btn waves-effect waves-light green"><i
+                                    class="material-icons">add</i></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s12 m12 center">
                             <a class="waves-effect waves-light btn-large green" href="carritoCompras.html"><i
-                  class="material-icons right">add_shopping_cart</i>Agregar al carrito</a>
+                                    class="material-icons right">add_shopping_cart</i>Agregar al carrito</a>
                         </div>
                     </div>
 
                 </div>
-                <div class="col m3">
-                </div>
+
             </div>
         </section>
         <br>
@@ -143,7 +124,7 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
