--- a/productos.html
+++ b/productos.html
@@ -19,7 +19,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li class="active">
@@ -35,7 +35,8 @@
                     <li><a class="a_menu" href="#">Contacto</a></li>
                     <li><a class="a_menu" href="#">Sucursales</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="black-text material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
+                        class="black-text material-icons">menu</i></a>
             </div>
         </nav>
     </header>
@@ -46,34 +47,14 @@
                 <ul class="right hide-on-med-and-down barraCategorias">
                     <li>
                         <a href="carritoCompras.html"><i
-                class="material-icons black-text text-darken-2 objetoCategorias">shopping_cart</i></a>
+                                class="material-icons black-text text-darken-2 objetoCategorias">shopping_cart</i></a>
                     </li>
                     <li>
-                        <a href="#"><a id="miCuenta" class="waves-effect waves-light btn objetoCategorias">Mi cuenta</a></a>
+                        <a href="#"><a id="miCuenta" class="waves-effect waves-light btn objetoCategorias">Mi
+                                cuenta</a></a>
                     </li>
                 </ul>
-                <!-- <ul class="left hide-on-med-and-down barraCategorias">
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Bolsas</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Botellas</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Cacatubos</a
-              >
-            </li>
-            <li>
-              <a class="text-darken-2 black-text objetoCategorias" href="#"
-                >Guardados</a
-              >
-            </li>
-          </ul> -->
+
 
                 <ul id="nav-mobile2" class="sidenav">
                     <li><a class="a_menu" href="#">Bolsas</a></li>
@@ -85,7 +66,7 @@
                 </ul>
 
                 <a href="#" data-target="nav-mobile2" class="right sidenav-trigger"><i
-            class="black-text material-icons green-text">settings</i></a>
+                        class="black-text material-icons green-text">settings</i></a>
             </div>
         </nav>
 
@@ -157,9 +138,9 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/bowlsimple.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/bowlsimple.jpg" alt="Bowl - Simple - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                    class="material-icons">add_shopping_cart</i></a>
+                                        class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
                                 <h5 class="">
@@ -175,7 +156,7 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/bandejadoble.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/bandejadoble.jpg" alt="Bandeja - Doble - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green">
                                     <i class="material-icons">add_shopping_cart</i>
                                 </a>
@@ -195,9 +176,9 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/botella.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/botella.jpg" alt="Botella - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                    class="material-icons">add_shopping_cart</i></a>
+                                        class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
                                 <h5 class="">
@@ -214,9 +195,9 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/cubiertos.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/cubiertos.jpg" alt="Cubiertos - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                    class="material-icons">add_shopping_cart</i></a>
+                                        class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
                                 <h5 class="">
@@ -232,9 +213,9 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/botella2.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/botella2.jpg" alt="Botella - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                    class="material-icons">add_shopping_cart</i></a>
+                                        class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
                                 <h5 class="">
@@ -251,9 +232,9 @@
                     <div class="col s12 m4">
                         <div class="card">
                             <div class="card-image">
-                                <img class="center-block fotoCatalogo" src="img/bandejasimple.jpg" />
+                                <img class="center-block fotoCatalogo" src="img/bandejasimple.jpg" alt="Bandejas - Simples - BioMountain" />
                                 <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                    class="material-icons">add_shopping_cart</i></a>
+                                        class="material-icons">add_shopping_cart</i></a>
                             </div>
                             <div class="card-content">
                                 <h5 class="">
@@ -276,9 +257,9 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img class="center-block fotoCatalogo" src="img/bolsaBiodegradable.jpg" />
+                            <img class="center-block fotoCatalogo" src="img/bolsaBiodegradable.jpg" alt="Bolas - Biodegradables - BioMountain" />
                             <a class="btn-floating halfway-fab waves-effect waves-light green"><i
-                  class="material-icons">add_shopping_cart</i></a>
+                                    class="material-icons">add_shopping_cart</i></a>
                         </div>
                         <div class="card-content">
                             <h5 class="">
@@ -293,7 +274,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img class="center-block fotoCatalogo" src="img/vasobiodegradable.jpg" />
+                            <img class="center-block fotoCatalogo" src="img/vasobiodegradable.jpg" alt="Vaso - Biodegradable - BioMountain" />
                             <a class="btn-floating halfway-fab waves-effect waves-light green">
                                 <i class="material-icons">add_shopping_cart</i>
                             </a>
@@ -311,7 +292,7 @@
                 <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
-                            <img class="center-block fotoCatalogo" src="img/vasotermico.jpg" />
+                            <img class="center-block fotoCatalogo" src="img/vasotermico.jpg" alt="Vaso - Termico - BioMountain" />
                             <a class="btn-floating halfway-fab waves-effect waves-light green">
                                 <i class="material-icons">add_shopping_cart</i>
                             </a>
@@ -351,7 +332,7 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
