--- a/sucursales.html
+++ b/sucursales.html
@@ -15,7 +15,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="productos.html">Productos</a></li>
@@ -40,13 +40,13 @@
                 <div class="col s12">
                     <div class="carousel carousel-slider">
                         <a class="carousel-item">
-                            <img src="img/slider1.jpg" alt="">
+                            <img src="img/slider1.jpg" alt="Sucursal - BioMountain">
                         </a>
                         <a class="carousel-item">
-                            <img src="img/slider2.jpg" alt="">
+                            <img src="img/slider2.jpg" alt="Sucursal - BioMountain">
                         </a>
                         <a class="carousel-item">
-                            <img src="img/slider3.jpg" alt="">
+                            <img src="img/slider3.jpg" alt="Sucursal - BioMountain">
                         </a>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <img src="img/rutas-senderismo-grazalema.jpg" alt="">
+                                <img src="img/rutas-senderismo-grazalema.jpg" alt="Senderistas Caminando">
                             </div>
                             <div class="card-content">
                                 <p>Podés encontrar nuestros locales en diferentes provincias para que disfrutes la experiencia de los productos de Bio Mountain en todo el país. Tenemos sucursales en Ciudad Autónoma de Buenos Aires, Jujuy, Chubut, Mendoza,
@@ -105,16 +105,18 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
-                <div class="col l7 s12 ">
+                <div class="col l7 s12">
                     <h5 class="white-text">Menú</h5>
                     <ul>
                         <li><a class="a_menu" href="index.html">Inicio</a></li>
                         <li><a class="a_menu" href="productos.html">Productos</a></li>
-                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li class="active">
+                            <a class="a_menu" href="contacto.html">Contacto</a>
+                        </li>
                         <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
                 </div>
@@ -128,9 +130,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>
-                © Bio Mountain
-            </p>
+            <p>© Bio Mountain</p>
         </div>
     </footer>
 
