--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="productos.html">Productos</a></li>
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="parallax">
-                <img src="img/fotoCont3.png" alt="Unsplashed background img 1" />
+                <img src="img/fotoCont3.png" alt="Imagen de ejemplo de senderistas 2" />
             </div>
         </div>
 
@@ -138,16 +138,18 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
-                <div class="col l7 s12 ">
+                <div class="col l7 s12">
                     <h5 class="white-text">Menú</h5>
                     <ul>
                         <li><a class="a_menu" href="index.html">Inicio</a></li>
                         <li><a class="a_menu" href="productos.html">Productos</a></li>
-                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li class="active">
+                            <a class="a_menu" href="contacto.html">Contacto</a>
+                        </li>
                         <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
                 </div>
@@ -161,9 +163,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>
-                © Bio Mountain
-            </p>
+            <p>© Bio Mountain</p>
         </div>
     </footer>
 
