--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="nav">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" /></a>
+                <a class="black-text" href="index.html" class=""><img class="logo_Nav" src="img/logoGrande.jpg" alt="Logo - BioMountain" /></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a class="a_menu" href="index.html">Inicio</a></li>
                     <li><a class="a_menu" href="productos.html">Productos</a></li>
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="parallax">
-                <img src="img/fotohome1.JPG" alt="Unsplashed background img 1" />
+                <img src="img/fotohome1.JPG" alt="Imagen de ejemplo de senderistas" />
             </div>
         </div>
 
@@ -164,16 +164,18 @@
             <div class="row">
                 <div class="col l2 s12">
                     <div class="imgFooter">
-                        <img src="img/logoBlanco.png" class="logo_footer" />
+                        <img src="img/logoBlanco.png" class="logo_footer" alt="Logo - BioMountain" />
                     </div>
                 </div>
 
-                <div class="col l7 s12 ">
+                <div class="col l7 s12">
                     <h5 class="white-text">Menú</h5>
                     <ul>
                         <li><a class="a_menu" href="index.html">Inicio</a></li>
                         <li><a class="a_menu" href="productos.html">Productos</a></li>
-                        <li class="active"><a class="a_menu" href="contacto.html">Contacto</a></li>
+                        <li class="active">
+                            <a class="a_menu" href="contacto.html">Contacto</a>
+                        </li>
                         <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                     </ul>
                 </div>
@@ -187,9 +189,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <p>
-                © Bio Mountain
-            </p>
+            <p>© Bio Mountain</p>
         </div>
     </footer>
 
