--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -45,7 +45,7 @@
             <div class="col s12">
                 <ul class="tabs">
                     <li class="tab col s3 black-text border-buttom-carrito"><a href="" class="black-text">Carrito
-                            (1)</a></li>
+                            (3)</a></li>
                 </ul>
             </div>
             <article>
@@ -70,7 +70,7 @@
                             </a>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <h4 class="">$100</h4>
+                            <h4 class="">$ 100</h4>
 
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                             </a>
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <h4 class="">$70</h4>
+                            <h4 class="">$ 70</h4>
                         </div>
                     </div>
 
@@ -128,7 +128,7 @@
 
                         </div>
                         <div class="col s6 m3 mt-1-carrito">
-                            <h4 class="">$60</h4>
+                            <h4 class="">$ 60</h4>
                         </div>
                     </div>
                 </div>
@@ -146,17 +146,17 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col s6">
+                        <div class="col s6 total">
                             <h4>Total con envio: </h4>
                         </div>
-                        <div class="col s6">
-                            <h4 class="">$430</h4>
+                        <div class="col s6 precioTotal">
+                            <h4 class="">$ 430</h4>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col s6">
                         </div>
-                        <div class="col s6">
+                        <div class="col s6 botonCompra">
                             <a class="waves-effect waves-green lighten-1 btn green"><i
                                     class="material-icons right">shopping_cart
                                 </i>Realizar Compra</a>
