--- a/sucursales.html
+++ b/sucursales.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="main_Home">
-        <div class="container section">
+        <!--<div class="container section">
             <div class="row">
                 <div class="col s12">
                     <div class="carousel carousel-slider">
@@ -51,7 +51,23 @@
                     </div>
                 </div>
             </div>
+        </div>-->
+        <div class="sucursalesBanner">
+            <div id="index-banner" class="parallax-container">
+                <div class="section no-pad-bot">
+                    <div class="container">
+                        <br /><br />
+                        <h1 class="header center text-lighten-2 titulo_Slider">
+                            <br> NUESTRAS SUCURSALES
+                        </h1>
+                    </div>
+                </div>
+                <div class="parallax">
+                    <img src="img/sucursales.jpg" alt="Imagen sucursales" />
+                </div>
+            </div>
         </div>
+
         <section class="container row">
             <div class="contenedorAbajo col s12 m4">
                 <div class="contenedor-izquierda col s12">
