--- a/carritoCompras.html
+++ b/carritoCompras.html
@@ -30,10 +30,10 @@
                 </ul>
 
                 <ul id="nav-mobile" class="sidenav">
-                    <li><a class="a_menu" href="#">Inicio</a></li>
-                    <li><a class="a_menu" href="#">Productos</a></li>
-                    <li><a class="a_menu" href="#">Contacto</a></li>
-                    <li><a class="a_menu" href="#">Sucursales</a></li>
+                    <li><a class="a_menu" href="index.html">Inicio</a></li>
+                    <li><a class="a_menu" href="productos.html">Productos</a></li>
+                    <li><a class="a_menu" href="contacto.html">Contacto</a></li>
+                    <li><a class="a_menu" href="sucursales.html">Sucursales</a></li>
                 </ul>
                 <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
                         class="black-text material-icons">menu</i></a>
