--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -70,7 +70,7 @@
                     <div class="col s12 m4">
                         <div class="icon-block">
                             <h2 class="center green-text">
-                                <a href="">
+                                <a href="detalle.html">
                                     <i class="fas fa-shopping-bag icono"></i>
                                 </a>
                             </h2>
@@ -81,7 +81,7 @@
                     <div class="col s12 m4">
                         <div class="icon-block">
                             <h2 class="center green-text">
-                                <a href="">
+                                <a href="detalle.html">
                                     <i class="fas fa-wine-bottle icono"></i>
                                 </a>
                             </h2>
@@ -92,7 +92,7 @@
                     <div class="col s12 m4">
                         <div class="icon-block">
                             <h2 class="center green-text">
-                                <a href="">
+                                <a href="detalle.html">
                                     <i class="fas fa-vial icono"></i>
                                 </a>
                             </h2>
@@ -111,14 +111,15 @@
                 <div class="row">
                     <div class="col s12 m4">
                         <div class="center contenedorCombos">
-                            <a href="" class="botonCombo">
+                            <a href="detalle.html" class="botonCombo">
                                 <div class="combos">
                                     <h3>BASICO</h3>
                                     <i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <div class="combos_Informacion">
                                     <p>
-                                        Combo de productos para el que se inicia en el senderismo
+                                        SENDERISTA PRINCIPIANTE <br>
+                                        1 Set de cubiertos + 1 Botella simple + 1 Bandeja simple
                                     </p>
                                 </div>
                             </a>
@@ -127,14 +128,15 @@
 
                     <div class="col s12 m4">
                         <div class="center contenedorCombos">
-                            <a href="" class="botonCombo">
+                            <a href="detalle.html" class="botonCombo">
                                 <div class="combos">
                                     <h3>MEDIO</h3>
                                     <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
                                 </div>
                                 <div class="combos_Informacion">
                                     <p>
-                                        Combo estandar de productos para el senderista experimentado
+                                        SENDERISTA EXPERIMENTADO <br>
+                                        1 Set de cubiertos + 2 Botella deportiva + 2 Bowl simple
                                     </p>
                                 </div>
                             </a>
@@ -143,13 +145,16 @@
 
                     <div class="col s12 m4">
                         <div class="center contenedorCombos">
-                            <a href="" class="botonCombo">
+                            <a href="detalle.html" class="botonCombo">
                                 <div class="combos">
                                     <h3>PRO</h3>
                                     <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                                 </div>
                                 <div class="combos_Informacion">
-                                    <p>Combo de productos ideal para el senderista experto</p>
+                                    <p>
+                                        SENDERISTA EXPERTO <br>
+                                        2 Set de cubiertos + 2 Botella deportiva + 2 Bandeja doble 
+                                    </p>                              
                                 </div>
                             </a>
                         </div>
