--- a/Pagina/detalle.html
+++ b/Pagina/detalle.html
@@ -70,16 +70,32 @@
             </div>
         </nav>
         <br><br><br><br>
+        <script> document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('.materialboxed');
+            var instances = M.Materialbox.init(elems, options);
+          });</script>
+
         <section id="objetoDetalle">
             <div class="row container ">
 
-                <div class="col s12 m8 center">
-                    <img class="responsive-img" src="img/vasotermico.jpg" alt="Vaso - Termico - Bambú">
+                <div class="col m1">
+                </div>
+
+            <div class="col s2 m1 center">
+                    <img class="responsive-img materialboxed" id="foto1" src="img/vasotermico.jpg" alt="Vaso - Termico - Bambú">
+                    <img class="responsive-img materialboxed" id="tapaVaso" src="img/tapaVaso.jpg" alt="Vaso - Termico - Bambú">
+                </div>
+
+                <div class="col s7 m6 center">
+                    <img class="responsive-img materialboxed" src="img/vasotermico.jpg" alt="Vaso - Termico - Bambú">
                 </div>
                 <div class="col s12 m4">
                     <div class="row">
                         <h4 class="center-align">Vaso termico</h4>
-                        <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas.</p>
+                        <p><span id="descripcion">Descripción: </span>Vaso termico biodegradable hecho de fibra de bambú. Mantiene caliente las bebidas. Incluye tapa.</p>
+                        <p><span id="capacidad">Capacidad: </span>350ml</p>
+                        <p><span id="material">Material: </span>Fibra de bambú</p>
+                        <p><span id="altura">Altura: </span>14 cm</p>
                     </div>
                     <div class="row">
                         <div class="col s12 m6">
@@ -156,6 +172,7 @@
     <!--  Scripts-->
     <script src="js/materialize.min.js"></script>
     <script src="js/materialize.js"></script>
+    <script src="js/script.js "></script>
 </body>
 
 </html>
